new color button
created a function that resets the board when new color is clicked on

--- a/color_game.css
+++ b/color_game.css
@@ -20,7 +20,6 @@ h1 {
     text-align: center;
 }
 
-#message {
-    color: white;
-    text-align: center;
+#menu {
+    background-color: white;
 }
